[package]
name = "alael-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography (for tokens/audits)
sha2 = "0.10"
openssl = { version = "0.10", features = ["vendored"] }

# WebAssembly runtime (for agent sandboxes)
wasmtime = "12"

# Async runtime (for multi-tasking)
tokio = { version = "1", features = ["full"] }

# Serialization (save/load ethics/tokens)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging (structured output)
log = "0.4"
env_logger = "0.10"
