[package]
name = "alael-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto basics (hashing/audits)
sha2 = "0.10"

# Wasm sandbox
wasmtime = "12"

# Async
tokio = { version = "1", features = ["full"] }

# Serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
