[package]
name = "alael-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
wasmtime = "12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", features = ["json"] }
